--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,16 @@
             <artifactId>cucumber-testng</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>gherkin</artifactId>
+            <version>5.0.0</version>
+        </dependency>
 
 
     </dependencies>
